--- a/index.html
+++ b/index.html
@@ -1,75 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">  
+<html lang="zh-CN">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>合金装备</title>
+    <meta name="description" content="合金装备系列游戏介绍，包括合金装备、合金装备2、合金装备3、合金装备4、合金装备5以及死亡搁浅等小岛工作室作品">
     <link rel="icon" href="logo.jpg">
     <link rel="stylesheet" href="metal gear.css">
   </head>
   <body>
     <div class="metal gear">
-      <div class="header">
-        <div class="kojima">
-        <a href="http://www.kojimaproductions.jp/en/" target="_blank">
-          <img src="66.png" alt="kojima productions">
+      <header class="header">
+        <a href="http://www.kojimaproductions.jp/en/" target="_blank" class="kojima" title="访问小岛工作室官网">
+          <img src="66.png" alt="小岛工作室标志">
         </a>
-        </div>
-      </div>
-      <div class="banner">
+      </header>
+
+      <nav class="banner">
         <div class="leader">
           <div class="leader-wrap">
-           <ul>
-             <li>合金装备
-               <div class="leader-list1">
-<p>1998年，Metal Gear Solid（合金装备：索利德）在PS上发售，标志着一种新类型游戏的诞生、也是第一次使游戏像电影一样演出及效果表现。由于小岛秀夫的制作理念，本作过场剧情全为即时演算，使得游戏的剧情与操作联系非常紧密（之后系列一直保持该传统），加之此类型带给玩家丰富的潜入方式以及在游戏中带来的紧张感，至2019年全球销量超过660万套，使得该系列在欧美有着空前人气，在全球的影响力非常大。</p>
-               </div>
-             </li>
-             <li>合金装备2
-               <div class="leader-list">
-                <p>《合金装备2：自由之子》（英文：METAL GEAR SOLID 2: SONS OF LIBERTY、日文：メタルギアソリッド2: サンズ オブ リバティー）是日本科乐美（KONAMI）公司在PlayStation2平台发售的战术类动作游戏。是《合金装备》索利德·斯内克（Solid Snake、简称：Snake、意为：固体蛇）系列的第二部续作。</p>
-               </div>
-             </li>
-             <li>合金装备3：食蛇者
-               <div class="leader-list3">
-               <p>《合金装备3：食蛇者》（英文：Metal Gear Solid 3:Snake Eater、日文：メタルギアソリッド3：スネークイーター）是日本科乐美（KONAMI）公司在PlayStation 2平台发售的战术类动作游戏《合金装备》（Metal Gear）系列的正统第三弹。这部作品的世界观描写了《合金装备》系列之源点。斯内克（Naked Snake，即未来的Big Boss）成为本作的绝对主角。</p>
-               </div>
-             </li>
-             <li>合金装备4：爱国者之枪
-               <div class="leader-list4">
-<p>《合金装备4:爱国者之枪》是由小岛制作室KOJIMAPRODUCTION研发，日本科乐美公司（KONAMI）发行的一款战术谍报类动作游戏。本作的主要场景将不再是前几作那样重兵把守的军事基地那样相对封闭，而是比3代的森林更开放的战场。为了完成任务Snake必须在交战的双方周旋，在PMC或者当地的地方武装组织中选择一方势力。而且随着战争的进行，两方实力的变化，Snake有时候也许要面对转投阵营的选择。</p>
-               </div>
-             </li>
-             <li>合金装备5：幻痛
-               <div class="leader-list5">
-<p>《合金装备V》为小岛工作室开发，Konami发行的动作冒险游戏。游戏分为两部分，前传《合金装备V：原爆点》和正传《合金装备V：幻痛》。由小岛工作室基于FOX引擎开发的合金装备系列第五代作品序章《合金装备V：原爆点》（METAL GEAR SOLID V GROUND ZEROS）于2014年3月20日同步抵达PS3、PS4、Xbox 360和Xbox One，并在之后登录了PC平台。
-</p>
-               </div>
-             </li>
-             <li>死亡搁浅
-               <div class="leader-list6">
-<p>《死亡搁浅》是一款由Kojima Productions开发，索尼互动娱乐于2019年11月8日发售的动作游戏。 
-  游戏讲述了主人公山姆必须勇敢直面因死亡搁浅而面目全非的世界，团结现存社会，拯救异空间人类的故事。 
-  2021年1月1日，获得PC Gamer 2020年度游戏奖。游戏模糊了单机与联机的边界，通过重建美国这个母题，让全世界玩家都被连接在一起。</p>
-               </div>
-             </li>
-           </ul>
-           <div class="dd"> 
-           </div>
+            <ul class="nav-menu">
+              <li class="nav-item">
+                <span class="nav-title">合金装备</span>
+                <div class="dropdown-content leader-list1">
+                  <p>1998年，Metal Gear Solid（合金装备：索利德）在PS上发售，标志着一种新类型游戏的诞生、也是第一次使游戏像电影一样演出及效果表现。由于小岛秀夫的制作理念，本作过场剧情全为即时演算，使得游戏的剧情与操作联系非常紧密（之后系列一直保持该传统），加之此类型带给玩家丰富的潜入方式以及在游戏中带来的紧张感，至2019年全球销量超过660万套，使得该系列在欧美有着空前人气，在全球的影响力非常大。</p>
+                </div>
+              </li>
+              <li class="nav-item">
+                <span class="nav-title">合金装备2</span>
+                <div class="dropdown-content leader-list">
+                  <p>《合金装备2：自由之子》（英文：METAL GEAR SOLID 2: SONS OF LIBERTY、日文：メタルギアソリッド2: サンズ オブ リバティー）是日本科乐美（KONAMI）公司在PlayStation2平台发售的战术类动作游戏。是《合金装备》索利德·斯内克（Solid Snake、简称：Snake、意为：固体蛇）系列的第二部续作。</p>
+                </div>
+              </li>
+              <li class="nav-item">
+                <span class="nav-title">合金装备3：食蛇者</span>
+                <div class="dropdown-content leader-list3">
+                  <p>《合金装备3：食蛇者》（英文：Metal Gear Solid 3:Snake Eater、日文：メタルギアソリッド3：スネークイーター）是日本科乐美（KONAMI）公司在PlayStation 2平台发售的战术类动作游戏《合金装备》（Metal Gear）系列的正统第三弹。这部作品的世界观描写了《合金装备》系列之源点。斯内克（Naked Snake，即未来的Big Boss）成为本作的绝对主角。</p>
+                </div>
+              </li>
+              <li class="nav-item">
+                <span class="nav-title">合金装备4：爱国者之枪</span>
+                <div class="dropdown-content leader-list4">
+                  <p>《合金装备4:爱国者之枪》是由小岛制作室KOJIMAPRODUCTION研发，日本科乐美公司（KONAMI）发行的一款战术谍报类动作游戏。本作的主要场景将不再是前几作那样重兵把守的军事基地那样相对封闭，而是比3代的森林更开放的战场。为了完成任务Snake必须在交战的双方周旋，在PMC或者当地的地方武装组织中选择一方势力。而且随着战争的进行，两方实力的变化，Snake有时候也许要面对转投阵营的选择。</p>
+                </div>
+              </li>
+              <li class="nav-item">
+                <span class="nav-title">合金装备5：幻痛</span>
+                <div class="dropdown-content leader-list5">
+                  <p>《合金装备V》为小岛工作室开发，Konami发行的动作冒险游戏。游戏分为两部分，前传《合金装备V：原爆点》和正传《合金装备V：幻痛》。由小岛工作室基于FOX引擎开发的合金装备系列第五代作品序章《合金装备V：原爆点》（METAL GEAR SOLID V GROUND ZEROS）于2014年3月20日同步抵达PS3、PS4、Xbox 360和Xbox One，并在之后登录了PC平台。</p>
+                </div>
+              </li>
+              <li class="nav-item">
+                <span class="nav-title">死亡搁浅</span>
+                <div class="dropdown-content leader-list6">
+                  <p>《死亡搁浅》是一款由Kojima Productions开发，索尼互动娱乐于2019年11月8日发售的动作游戏。
+                    游戏讲述了主人公山姆必须勇敢直面因死亡搁浅而面目全非的世界，团结现存社会，拯救异空间人类的故事。
+                    2021年1月1日，获得PC Gamer 2020年度游戏奖。游戏模糊了单机与联机的边界，通过重建美国这个母题，让全世界玩家都被连接在一起。</p>
+                </div>
+              </li>
+            </ul>
+            <div class="dd"></div>
           </div>
           <div class="banner-box">
-            <img src="back.jpg" alt="false">
+            <img src="back.jpg" alt="合金装备系列游戏背景">
           </div>
         </div>
-      </div>
-      <div class="footer">
-<p> The Man who Sold the World</p>
-<div class="footer-text"> 
-<p>love and peace</p>
-<p>by mikon</p>
-</div>
-      </div>
-      </div>
+      </nav>
+
+      <footer class="footer">
+        <p class="footer-quote">The Man who Sold the World</p>
+        <div class="footer-text">
+          <p>love and peace</p>
+          <p>by mikon</p>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
