修改混合模式

--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
     <!-- 3D 模型层 (Container 尺寸已在 CSS 中调整) -->
     <div id="spline-scene">
         <!-- Iframe 嵌入，CSS 中已配置裁切以隐藏 Logo -->
-        <iframe src="https://my.spline.design/cybersamuraiupdatedmaterial-uusemRYgbNivFc8BolQCpu2c/" frameborder="0"></iframe>
+        <!-- User updated URL: 强制添加版本号以清除缓存 -->
+        <iframe src="https://my.spline.design/cybersamuraiupdatedmaterial-uusemRYgbNivFc8BolQCpu2c/?v=updated_final" frameborder="0"></iframe>
+        
+        <!-- Spline Logo 遮挡补丁 (迭代 5) -->
+        <div class="logo-patch"></div>
     </div>
 
     <div class="interface">
